syntax = "proto3";

package api.v1.proto.upload;

option go_package = "github.com/PickHD/singkatin-revamp/upload/pkg/api/v1/proto/upload;uploadpb";

message UploadAvatarMessage {
    string file_name = 1;
    bytes avatars = 2;
    string content_type = 3;
}